  \itemize{
    \item Changes in existing R functions:
    \itemize{
      \item The Ray-casting algorithm is now implemented in a cpp function, see \code{src/pointsInPolygon_core.cpp}, see \ghpr{10}.
      \item A grid can be added in \code{plot0}, three arguments control its color (\code{grid.col}), its width (\code{grid.lwd}) and type (\code{grid.lty}).
      \item `frameit()` renamed `frameIt()` for the sack of naming consistency.
      \item `compassRose1()` and `compassRose2()` respectively renamed `compassRoseCardinal()` and `compassRose()`.
      \item `layout2()` renamed `interactiveLayout()` to better reflect what it does.
    }
    \item Changes in the package structure:
    \itemize{
      \item Rcpp added see \ghpr{10}.
    }
  }
}

\section{Changes in graphicsutils version 1.1-2}{
  \itemize{
    \item Addition of R functions:
    \itemize{
      \item \code{howManyRC()} compute the number of rows and columns to split a graphic window into panels as equally as possible.
      \item \code{image2()} an alternative \code{image}
    }
    \item Changes in existing R functions:
    \itemize{
      \item Color palettes added through \code{gpuPalette()}, this adresses \ghit{#5}.
      \item \code{getIcon.R} has been removed as recommended in \ghit{9}.
      \item \code{showPalette()} now displays the first colors of the palette properly.
      \item \code{showPalette()} shows the colors from palette() by default.
      \item \code{showPalette()} now adds only one line when displaying the hex color code and tune the color according to the background.
      \item Must of functions that creates new plots now ends by \code{invisible(NULL)}.
      \item \code{graphicsutils.R} has been renamed \code{zzz.R} and introduce a
      startup message including the version of the package.
      \item \code{pickColors()} has been reviewed to adress \ghit{3}.
      \item \code{plot0()} properly handle matrix of coordinates.