@@ -1,0 +1,26 @@
+<!--- Provide a general summary of your changes in the Title above -->
+
+## Description
+<!--- Describe your changes in detail -->
+<!--  Associate emoji to you changes:
+- :book: documentation
+- :hammer: function
+- :wrench: method
+- :shield: tests
+- :floppy_disk: data
+- :wastebasket: delete
+- :arrow_up: new version
+- :bug: bug
+-->
+
+## Related Issue
+<!--- if this closes an issue make sure include e.g., "fix #4", "close #6" or
+similar - or if just relates to an issue make sure to mention
+it like "#4" -->
+
+## Example
+<!--- if introducing a new feature or changing behavior of existing
+methods/functions, include an example if possible to do in brief form -->
+
+<!--- Did you remember to include tests? Unless you're just changing
+grammar, please include new tests for your change -->
