@@ -1,6 +1,8 @@
 language: r
 warnings_are_errors: true
 sudo: required
+cache: packages
+
 
 notifications:
   slack:
