@@ -4,7 +4,7 @@ Title: Collection of graphics utilities
 Version: 1.2-0
 Date: 2018-03-16
 Authors@R: c(person("Kevin", "Cazelles", role = c("aut", "cre"), email = "kcazelle@uoguelph.ca", comment = c(ORCID = "0000-0001-6619-9874")),
-  person("Nicolas", "Casajus", role = c("aut"), comment = c(ORCID = "0000-0001-7893-4389")),
+  person("Nicolas", "Casajus", role = c("aut"), comment = c(ORCID = "0000-0002-5537-5294")),
   person("David", "Beauchesne", role = c("aut")))
 Description: A collection of functions to help customizing graphics-based plots.
 Depends:
