@@ -10,14 +10,22 @@
     \itemize{
       \item The Ray-casting algorithm is now implemented in a cpp function, see \code{src/pointsInPolygon_core.cpp}, see \ghpr{10}.
       \item A grid can be added in \code{plot0}, three arguments control its color (\code{grid.col}), its width (\code{grid.lwd}) and type (\code{grid.lty}).
-      \item `frameit()` renamed `frameIt()` for the sack of naming consistency.
-      \item `compassRose1()` and `compassRose2()` respectively renamed `compassRoseCardinal()` and `compassRose()`.
-      \item `layout2()` renamed `interactiveLayout()` to better reflect what it does.
+      \item \code{frameit} renamed \code{frameIt()}for the sack of naming consistency.
+      \item \code{compassRose1()} and \code{compassRose2()} respectively renamed \code{compassRoseCardinal()} and \code{compassRose()}.
+      \item \code{layout2()} renamed \code{interactiveLayout()} to better reflect what it does.
+      \item  new set of functions \code{contrastColors()} to easily contrast colors using different methods.
+      \item  new function \code{biBoxplot()} to draw asymmetrical boxplots.
     }
-    \item Changes in the package structure:
+    \item Changes in the package's structure:
     \itemize{
       \item Rcpp added see \ghpr{10}.
     }
+    \item Changes in the package's metadata:
+    \itemize{
+      \item DESCRIPTION now includes authors' ORCID.
+      \item a LICENSE has been added.
+    }
+
   }
 }
 
